--- a/.gitmodules
+++ b/.gitmodules
@@ -1,58 +1,58 @@
 [submodule ".vim/bundle/ale"]
 	path = .vim/bundle/ale
-	url = https://github.com/w0rp/ale.git
+	url = git@github.com:dense-analysis/ale.git
 [submodule ".vim/bundle/awk.vim"]
 	path = .vim/bundle/awk.vim
-	url = https://github.com/vim-scripts/awk.vim.git
+	url = git@github.com:vim-scripts/awk.vim.git
 [submodule ".vim/bundle/gruvbox"]
 	path = .vim/bundle/gruvbox
-	url = https://github.com/morhetz/gruvbox.git
+	url = git@github.com:morhetz/gruvbox.git
 [submodule ".vim/bundle/jedi-vim"]
 	path = .vim/bundle/jedi-vim
-	url = https://github.com/davidhalter/jedi-vim.git
+	url = git@github.com:davidhalter/jedi-vim.git
 	ignore = dirty
 [submodule ".vim/bundle/tabular"]
 	path = .vim/bundle/tabular
-	url = https://github.com/godlygeek/tabular.git
+	url = git@github.com:godlygeek/tabular.git
 [submodule ".vim/bundle/tagbar"]
 	path = .vim/bundle/tagbar
-	url = https://github.com/majutsushi/tagbar.git
+	url = git@github.com:majutsushi/tagbar.git
 [submodule ".vim/bundle/ultisnips"]
 	path = .vim/bundle/ultisnips
-	url = https://github.com/SirVer/ultisnips
+	url = git@github.com:SirVer/ultisnips
 [submodule ".vim/bundle/vim-airline"]
 	path = .vim/bundle/vim-airline
-	url = https://github.com/bling/vim-airline.git
+	url = git@github.com:bling/vim-airline.git
 [submodule ".vim/bundle/vim-airline-themes"]
 	path = .vim/bundle/vim-airline-themes
-	url = https://github.com/vim-airline/vim-airline-themes
+	url = git@github.com:vim-airline/vim-airline-themes
 [submodule ".vim/bundle/vim-colors-solarized"]
 	path = .vim/bundle/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
+	url = git@github.com:altercation/vim-colors-solarized.git
 [submodule ".vim/bundle/vim-fugitive"]
 	path = .vim/bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
+	url = git@github.com:tpope/vim-fugitive.git
 [submodule ".vim/bundle/vim-puppet"]
 	path = .vim/bundle/vim-puppet
-	url = https://github.com/rodjek/vim-puppet.git
+	url = git@github.com:rodjek/vim-puppet.git
 [submodule ".vim/bundle/vim-python-pep8-indent"]
 	path = .vim/bundle/vim-python-pep8-indent
-	url = https://github.com/hynek/vim-python-pep8-indent.git
+	url = git@github.com:hynek/vim-python-pep8-indent.git
 [submodule ".vim/bundle/vim-snippets"]
 	path = .vim/bundle/vim-snippets
-	url = https://github.com/honza/vim-snippets.git
+	url = git@github.com:honza/vim-snippets.git
 [submodule ".vim/bundle/vim-vinegar"]
 	path = .vim/bundle/vim-vinegar
-	url = https://github.com/tpope/vim-vinegar
+	url = git@github.com:tpope/vim-vinegar
 [submodule "vim-pathogen"]
 	path = vim-pathogen
-	url = https://github.com/tpope/vim-pathogen.git
+	url = git@github.com:tpope/vim-pathogen.git
 [submodule "deps/vimfiles"]
 	path = deps/vimfiles
-	url = https://github.com/akanosora/vimfiles.git
+	url = git@github.com:akanosora/vimfiles.git
 [submodule "deps/vim-colors-solarized"]
 	path = deps/vim-colors-solarized
-	url = https://github.com/altercation/vim-colors-solarized.git
+	url = git@github.com:altercation/vim-colors-solarized.git
 [submodule ".vim/bundle/indentLine"]
 	path = .vim/bundle/indentLine
 	url = git@github.com:Yggdroot/indentLine.git
